# bananay-calc

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  сектора.json
.github/workflows/: bananay-calc-AutoDeployTrigger-beb1ebc3-b437-4870-8028-654d38ec7ba4.yml  master_bananayfunction.yml  tests.yml.example
alembic/: env.py
alembic/versions/: 009e5a6a7e86_increase_email_field_length.py  019eec32bc63_change_reviewed_by_to_int.py  03549ea0f98d_add_daily_checkin_tables.py  096e992f191b_add_sectors_table.py  109cbe768b76_add_delivery_points_search_support.py  13d596b1b334_add_geo_users_table.py  1e769645be53_initial_schema_and_seed_data.py  28b9fc7cc6d0_merge_geo_prefix_and_users.py  45db8c0b714c_add_checkin_moderation_fields.py  56c3ab98d1e7_add_delivery_templates_and_refactor_.py  9d1bd50d6b27_add_title_field_to_delivery_points.py  a1b2c3d4e5f6_add_dc_unload_photo.py  a1b2c3d4e5f6_add_user_roles_and_producer_profiles.py  a1b2c3d4e5f7_add_delivery_lists_tables.py  a2b3c4d5e6f7_add_qr_token_and_scan_events.py  a4b5c6d7e8f9_expand_driver_vehicle_schema.py  b2c3d4e5f6a7_add_onboarding_status.py  b3449f3dbe32_increase_phone_mobile_field_length.py  b3c4d5e6f7g8_add_dc_accounts_and_item_point_dc_phases.py  courier_last_location.py  (+34 more)
app/: dependencies.py  main.py
scripts/: import_delivery_points.py  import_sectors.py  seed_distribution_centers.py  telegram_otp_bot.py
tests/: conftest.py  test_countries.py  test_delivery_points.py  test_regions.py  test_sectors.py  test_tags.py
(+154 files in other folders)
