[project]
name = "bananay-calc"
version = "0.1.0"
description = "Delivery calculator API"
authors = [
    {name = "Aliaksandr Aliakseyeu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.32.0,<0.33.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.24.0,<0.25.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "httpx (>=0.27.0,<0.28.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
